--- a/boot.ipxe.cfg
+++ b/boot.ipxe.cfg
@@ -3,6 +3,8 @@
 # OPTIONAL: Base URL used to resolve most other resources
 # Should always end with a slash
 set boot-url http://boot.wired.rocks/
+set cdn_url  http://wired.rocks/
+
 #set boot-url nfs://${nfs-server}${nfs-root}
 
 # OPTIONAL: What URL to use when sanbooting
@@ -19,3 +21,4 @@ set boot-dir boot/
 # and commonly used at the end of simple override scripts
 # in ${boot-dir}.
 set menu-url ${boot-url}menu.ipxe
+
