--- a/boot.ipxe.cfg
+++ b/boot.ipxe.cfg
@@ -2,7 +2,7 @@
 
 # OPTIONAL: Base URL used to resolve most other resources
 # Should always end with a slash
-set boot-url https://boot.wired.rocks/
+set boot-url https://nejahbn.github.io/
 set cdn_url  http://wired.rocks/
 
 #set boot-url nfs://${nfs-server}${nfs-root}
