--- a/boot.ipxe.cfg
+++ b/boot.ipxe.cfg
@@ -3,7 +3,7 @@
 # OPTIONAL: Base URL used to resolve most other resources
 # Should always end with a slash
 set boot-url https://nejahbn.github.io/
-set cdn-url http://wired.rocks/
+set cdn-url http://nejahbn.gitlab.io/osi/
 
 #set boot-url nfs://${nfs-server}${nfs-root}
 
